Fix paragraph spacing

--- a/css/receiving-rides.css
+++ b/css/receiving-rides.css
@@ -138,8 +138,8 @@
 
 .page-paragraph {
     width: 60%;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
